z-index fixed

--- a/Extension/style.css
+++ b/Extension/style.css
@@ -34,7 +34,7 @@
     border:none;
     top:20px;
     right:20px;
-    z-index: 100500;
+    z-index: 2147483647;
     box-shadow: 0 0 10px black;
     opacity:0.7;
     color:#000;
